# skynet-hunter

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  config.toml  pyproject.toml
.github/workflows/: pages.yml
data/: los_angeles_1984.json
docs/: agent-safety.md  explainer.html  skull-from-image.py  skull-proofs-gen.py  skull-proofs.html
skynet/: __init__.py  arena.py  cli.py  cost.py  grid.py  orchestrator.py  scenario.py  schemas.py  simulate.py  stream.py  theme.py  ui.py  units.py
skynet/tui/: __init__.py  app.py  skull.py  themes.py  widgets.py
skyterm/: README.md  build.py  skyterm.itermcolors  starship.toml
skyterm/ghostty/: skyterm
tests/: test_arena.py  test_cost.py  test_grid.py  test_resistance.py  test_scenario.py  test_simulate.py  test_tui.py
web/: index.html  server.py
