[project]
name = "skynet-hunter"
version = "0.1.0"
description = "An agentic Terminator demo: Skynet orchestrates terminator sub-agents to hunt John Connor across a synthetic 1984 Los Angeles grid."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Paul Laudeman" }]
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.49.0",
    "pydantic>=2.6",
    "textual>=0.89.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
skynet = "skynet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skynet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
